--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.2",
-    "react-native-reanimated": "^1.4.0",
+    "react-native-picker-select": "^6.6.0",
+    "react-native-reanimated": "^1.7.1",
     "react-native-screens": "^1.0.0-alpha.23",
     "react-navigation": "^4.0.10",
+    "react-navigation-animated-switch": "^0.5.8",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.6.2",
     "react-redux": "^7.1.3",
