--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@react-native-community/async-storage": "^1.7.1",
     "@react-native-community/cli": "^3.0.4",
     "@types/node": "^12.12.17",
+    "@types/react-native-indicators": "^0.16.0",
     "@types/react-redux": "^7.1.5",
     "class-transformer": "^0.2.3",
     "firebase": "^7.6.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-indicators": "^0.17.0",
     "react-native-picker-select": "^6.6.0",
     "react-native-reanimated": "^1.7.1",
     "react-native-screens": "^1.0.0-alpha.23",
