--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^12.12.17",
     "@types/react-native-indicators": "^0.16.0",
     "@types/react-redux": "^7.1.5",
+    "axios": "^0.19.2",
     "class-transformer": "^0.2.3",
     "firebase": "^7.6.0",
     "react": "16.9.0",
