--- a/ios/CoronaRadar/Info.plist
+++ b/ios/CoronaRadar/Info.plist
@@ -38,7 +38,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Lato-Bold.ttf</string>
@@ -46,6 +46,7 @@
 		<string>Lato-Medium.ttf</string>
 		<string>Lato-Regular.ttf</string>
 		<string>Lato-Semibold.ttf</string>
+		<string>Lato-Black.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
