--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@react-native-community/async-storage": "^1.7.1",
     "@react-native-community/cli": "^3.0.4",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^12.12.17",
     "@types/react-native-indicators": "^0.16.0",
     "@types/react-redux": "^7.1.5",
     "axios": "^0.19.2",
     "class-transformer": "^0.2.3",
     "firebase": "^7.6.0",
+    "lodash": "^4.17.15",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.2",
